Add NATS connection and distinguish between contentTypes in graph
