# api/generated.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
 package api
 
 import (
@@ -9,6 +9,7 @@ import (
 	"fmt"
 	"net/http"
 
+	"github.com/deepmap/oapi-codegen/pkg/runtime"
 	"github.com/labstack/echo/v4"
 )
 
@@ -26,13 +27,16 @@ type AggregatedTransactions struct {
 
 // DataPoint Data point
 type DataPoint struct {
+	// ContentType content type of the data point
+	ContentType string `json:"contentType"`
+
 	// Label time of the data point formatted as RFC3339
 	Label string `json:"label"`
 
 	// Timestamp time of the data point formatted as unix timestamp
 	Timestamp int `json:"timestamp"`
 
-	// Value number of transactions at the given timestamp
+	// Value number of transactions between the given timestamp and the next timestamp
 	Value int `json:"value"`
 }
 
@@ -298,9 +302,8 @@ type StrictServerInterface interface {
 	GetWebTransactionsAggregated(ctx context.Context, request GetWebTransactionsAggregatedRequestObject) (GetWebTransactionsAggregatedResponseObject, error)
 }
 
-type StrictHandlerFunc func(ctx echo.Context, args interface{}) (interface{}, error)
-
-type StrictMiddlewareFunc func(f StrictHandlerFunc, operationID string) StrictHandlerFunc
+type StrictHandlerFunc = runtime.StrictEchoHandlerFunc
+type StrictMiddlewareFunc = runtime.StrictEchoMiddlewareFunc
 
 func NewStrictHandler(ssi StrictServerInterface, middlewares []StrictMiddlewareFunc) ServerInterface {
 	return &strictHandler{ssi: ssi, middlewares: middlewares}
